# kururi-compiler

./: .gitignore  CLAUDE.md  docker-compose.yml  example.kururi  grammer.md  readme.md  usage.md
codegen/: Cargo.toml  Dockerfile
codegen/src/: main.rs
compiler/: Cargo.toml  Dockerfile
compiler/src/: ast.rs  codegen.rs  compiler.rs  error.rs  handlers.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_new.rs  semantic.rs  token.rs  types.rs
lexer/: Cargo.toml
lexer/src/: main.rs
orchestrator/: direct_compilation_output.py  multiplication_table.py  pyproject.toml  run_pipeline.py  test_direct_compilation.py
parser/: Dockerfile
parser/src/: main.rs
semantic/: Cargo.toml  Dockerfile
semantic/src/: main.rs
