[package]
name = "kururi-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "kururi_compiler"
path = "src/lib.rs"

[[bin]]
name = "kururi-compiler"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"